@@ -1,3 +1,6 @@
+- enhance sorted graph by better taking into account conflicts from state->{rejected}
+  (fixes "big transaction" in urpmi split-transactions--strict-require.t test)
+
 Version 2.04 - 27 September 2007, by Pascal "Pixel" Rigaux
 
 - handle promotion via obsolete, not only provides
